# JAVDB_AutoSpider

./: .coverage  .coveragerc  .dockerignore  .env.REMOVED.git-id.REMOVED.git-id  .env.example  .gitignore  .gitignore.REMOVED.git-id  .gitignore.REMOVED.git-id.REMOVED.git-id  DOCKER_QUICKSTART.md  DOCKER_QUICKSTART_CN.md  Dockerfile  FILES_CREATED.md  GITHUB_SECRETS_VARIABLES.md  Javdb_Spider.py  Javdb_Spider.py.REMOVED.git-id  README.md  README.md.REMOVED.git-id  README_CN.md  README_TESTING_SECTION.md  TESTING.md  TESTING_QUICKSTART.md  UNIT_TEST_IMPLEMENTATION_SUMMARY.md  _restructure_design.py  compat.py  config.example.py  config.py  config.py.example  docker-build.sh  docker-compose.yml  docker-entrypoint.sh  env.example  git_config.py  git_config.py.REMOVED.git-id  issue_pending_fix.md  javdb_login.py  javdb_spider.py.REMOVED.git-id.REMOVED.git-id  package-lock.json  package.json  pikpak_bridge.py  pipeline.py  (+18 more)
.github/: GITHUB_ACTIONS_SETUP.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  SUMMARY.md
Ad Hoc/: Javdb_AdHoc_video_codes_NMSL_20251221.csv  Javdb_TodayTitle_20250629.csv  Javdb_TodayTitle_20250829.csv  Javdb_TodayTitle_20250830.csv  (+2 more)
api/: __init__.py  (+2 more)
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: csv_writer.rs  dedup_ops.rs  lib.rs  models.rs  rclone_ops.rs  url_helper.rs
rust_core/src/history/: manager.rs
rust_core/src/proxy/: ban_manager.rs  masking.rs  mod.rs  pool.rs
rust_core/src/requester/: config.rs  handler.rs  helper.rs  mod.rs
rust_core/src/scraper/: common.rs  detail_parser.rs  index_parser.rs  mod.rs  tag_parser.rs
(+1762 files in other folders)
