[package]
name = "javdb_rust_core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for JAVDB AutoSpider"

[lib]
name = "javdb_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-log = "0.11"

# HTML parsing
scraper = "0.21"
ego-tree = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "cookies", "socks", "gzip", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
parking_lot = "0.12"
url = "2"
urlencoding = "2"
log = "0.4"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
